--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <main> <!-- everything that's main on the page-->
             <section> <!--group everything into a section-->
                 <div> <!--group everything-->
-                    <h2>Meus Jogos</h2>
-                    <p>Os jogos que eu mais gosto de jogar</p>
+                    <h2>Games</h2>
+                    <p>Most played games on Twitch TV</p>
                     <!-- <ol start="2"> makes an ordered list starting at any number
                         <li>one</li>
                         <li>two</li>
@@ -63,8 +63,8 @@
 
             <section>
                 <div> <!--group everything-->
-                    <h2>Canais e Streamers</h2>
-                    <p>Lista de canais e transmissões que não perco</p>
+                    <h2>Chanels and Streamers</h2>
+                    <p>List of brazilian Streamers</p>
                     <ul class="channel-list">
                         <li>
                             <a 
@@ -93,8 +93,8 @@
 
             <section>
                 <div> <!--group everything-->
-                    <h2>Minhas redes</h2>
-                    <p>Se conecte comigo agora mesmo</p>
+                    <h2>My Social Media</h2>
+                    <p>Connect with me! (in this case... with Mayk Brito :) </p>
                     <ul class="social-list">
                         <li>
                             <a 
