--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <section>
                 <div> <!--group everything-->
-                    <h2>Chanels and Streamers</h2>
+                    <h2>Channels and Streamers</h2>
                     <p>List of brazilian Streamers</p>
                     <ul class="channel-list">
                         <li>
